--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "Breeze Ads: Friendly Adblock for Youtube™",
   "description": "We loved Ad :)",
-  "version": "1.0",
+  "version": "1.1",
   "manifest_version": 3,
   "action": {
-    "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
+    "default_popup": "main.html",
+    "default_icon": "logo.png"
   },
   "content_scripts": [
     {
