--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Zip Chrome Extension
         run: |
           cd src/chrome
-          zip -r BreezeAds_chrome_${{ github.event.release.tag_name }}.zip .
+          zip -r ../../BreezeAds_chrome_${{ github.event.release.tag_name }}.zip .
 
       - name: Upload Release Asset
         if: startsWith(github.ref, 'refs/tags/')
